# ac_mod_retexture_tool

./: .gitignore  CLAUDE.md  CLAUDE.original.md  CONTRIBUTING.md  PLAN.md  README.md  Taskfile.yml  biome.json  components.json  index.html  library_detection_PLAN.md  package.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
scripts/: post-install.ts  set-version.ts  setup-enhance-windows.ps1
src/: App.vue  TexturePreviewApp.test.ts  TexturePreviewApp.vue  main.ts  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  preview.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: decode.rs  enhance.rs  extract.rs  import.rs  mod.rs  repack.rs  scan.rs  test_in_game.rs  texture.rs  track_hero.rs
src-tauri/src/commands/ac_detect/: library.rs  mod.rs  types.rs  validate.rs  vdf.rs
src-tauri/src/converters/: dds.rs  mod.rs
src-tauri/src/models/: mod.rs  mod_info.rs  repack.rs  texture.rs
src-tauri/src/parsers/: kn5.rs  mod.rs
src/__mocks__/: setup.ts  tauri-api.ts  tauri-dialog.ts  tauri-opener.ts  tauri-store.ts
src/assets/styles/: globals.css
src/components/: CommandPalette.vue
src/components/layout/: AppHeader.test.ts  AppHeader.vue  StatusBar.test.ts  StatusBar.vue  WorkspaceLayout.test.ts  WorkspaceLayout.vue
src/components/mod/: Kn5Sidebar.vue  ModBadge.test.ts  ModBadge.vue  ModDropZone.test.ts  ModDropZone.vue  ModTree.test.ts  ModTree.vue  ModTreeNodes.vue
src/components/repack/: ModInfoPanel.test.ts  (+3 more)
src/composables/: useAcDetection.test.ts  useAcDetection.ts  useAcLibrary.test.ts  useAcLibrary.ts  useAccent.test.ts  useAccent.ts  useCancelConfirm.test.ts  useCancelConfirm.ts  useGlobalCommands.test.ts  useGlobalCommands.ts  useLibrary.test.ts  useLibrary.ts  useMod.test.ts  useMod.ts  useRepack.test.ts  useRepack.ts  useTestInGame.ts  useTextureDetail.test.ts  useTextureDetail.ts  useTextureFilter.test.ts  useTextureFilter.ts  useTextures.test.ts  useTextures.ts  useTheme.test.ts  useTheme.ts  useUpdateCheck.test.ts  useUpdateCheck.ts
src/lib/: platform.test.ts  platform.ts  previewPayload.test.ts  previewPayload.ts  replacementStore.ts  tauri.test.ts  tauri.ts  utils.test.ts  utils.ts
src/types/: index.ts
src/views/: LibraryView.vue
(+32 files in other folders)
