[package]
name = "ac-mod-toolkit"
version = "0.1.0"
edition = "2021"

[lib]
name = "ac_mod_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
image = "0.25"
image_dds = "0.6"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
